zed/neo-zed/grammars/neo/grammar.js
    source_file: $ => seq(
      optional($.namespace_declaration),
      repeat($._top_level_item),
    ),

    // =====================================================================
    // TOP-LEVEL ITEMS
    // =====================================================================

    _top_level_item: $ => choice(
      $.function_declaration,
      $.typedef_declaration,
      $.function_overload_declaration,
      $.operator_overload_declaration,
      $.extern_block,
      $.import_statement,
      $.using_declaration,
      $.test_block,
      $._statement,
    ),

    // =====================================================================
    // NAMESPACE & IMPORTS
    // =====================================================================

    function_declaration: $ => seq(
      optional($.attribute_list),
      'fn',
      field('name', $.identifier),
      optional($.generic_parameters),
      $.parameter_list,
      optional(seq(':', field('return_type', $._type))),
      optional(choice(
        '#macro',
        seq('#modify', $.block),
      )),
      choice(
        field('body', $.block),
        seq('undefined', ';'),
        ';',
      ),
    ),

    parameter_list: $ => seq(
      '(',
      commaSep($.parameter),
      optional(','),
      ')',
    ),

    parameter: $ => choice(
      seq(
        optional('mut'),
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        optional(seq(choice('=', ':='), field('default', $._expression))),
      ),
      // Variadic: name: ..Type
      seq(
        field('name', $.identifier),
        ':',
        '..',
        field('type', $._type),
      ),
      '#c_varargs',
    ),

    function_overload_declaration: $ => seq(
      optional($.attribute_list),
      'fn',
      field('name', $.identifier),
      'overloads',
      '{',
      commaSep1($.identifier),
      optional(','),
      '}',
    ),

    operator_overload_declaration: $ => seq(
      optional($.attribute_list),
      'operator',
      field('op', $._operator_token),
      'overloads',
      '{',
      commaSep1($.identifier),
      optional(','),
      '}',
    ),

    _operator_token: $ => choice(
      '+', '-', '*', '/', '%', '**',
      '==', '!=', '<', '<=', '>', '>=',
      '<<', '>>', '&', '|', '^', '~',
      '++', '--',
      '[]', '[]=',
    ),

    // --- Typedefs ---

    typedef_declaration: $ => seq(
      optional($.attribute_list),
      'typedef',
      field('name', $._type_identifier),
      choice(
        $.typedef_alias,
        $.struct_definition,
        $.enum_definition,
        $.union_definition,
        $.error_definition,
      ),
    ),

    typedef_alias: $ => seq('as', field('type', $._type), ';'),

    struct_definition: $ => seq(
      'struct',
      optional($.generic_parameters),
      optional(seq(':', 'undefined')),
      '{',
      repeat($._struct_member),
      '}',
    ),

    _struct_member: $ => choice(
      $.struct_field,
      $.embedded_struct,
      $.compile_time_directive,
    ),

    struct_field: $ => seq(
      optional($.attribute_list),
      optional('const'),
      commaSep1(field('name', $.identifier)),
      ':',
      field('type', $._type),
      optional(choice(
        seq('=', field('default', $._expression)),
        seq(':', field('bits', $.number_literal)),
      )),
      ';',
    ),

    enum_definition: $ => seq(
      'enum',
      optional(seq(':', field('backing_type', $._type))),
      '{',
      commaSep($.enum_variant),
      optional(','),
      '}',
    ),

    enum_variant: $ => choice(
      seq(
        field('name', $.identifier),
        optional(seq('=', field('value', $._expression))),
      ),
      seq('_', '=', field('value', $._expression)),
    ),

    error_definition: $ => seq(
      'error',
      '{',
      commaSep($.error_variant),
      optional(','),
      '}',
    ),

    error_variant: $ => choice(
      seq(
        field('name', $.identifier),
        optional(seq('=', field('value', $._expression))),
      ),
      seq(
        '...',
        field('type', $._type),
        optional(seq('-', '{', commaSep1($.identifier), '}')),
      ),
      seq(
        field('source', $.qualified_identifier),
        'as',
        field('alias', $.identifier),
      ),
    ),

    // --- Extern ---

    _type: $ => choice(
      $.primitive_type,
      alias($.identifier, $.type_identifier),
      $.qualified_type,
      $.pointer_type,
      $.array_type,
      $.dynamic_array_type,
      $.inferred_array_type,
      $.slice_type,
      $.multi_pointer_type,
      $.sentinel_pointer_type,
      $.map_type,
      $.ordered_map_type,
      $.tuple_type,
      $.function_type,
      $.generic_type,
      $.generic_parameter_type,
      $.optional_type,
      $.result_type,
      $.union_type,
      $.soa_type,
      $.simd_type,
      $.anonymous_struct_type,
      $.typeof_type,
      $.parenthesized_type,
      $.self_type,
    ),

    _type_identifier: $ => alias($.identifier, $.type_identifier),

    primitive_type: $ => choice(
      'int', 'uint', 'float', 'double',
      'byte', 'u8', 'u16', 'u32', 'u64', 'u128',
      's8', 's16', 's32', 's64', 's128',
      'f16', 'f32', 'f64', 'f128',
      'bool', 'b8', 'b16', 'b32', 'b64',
      'char', 'string', 'cstring',
      'intptr', 'uintptr', 'rawptr',
      'typeid', 'void', 'unknown', 'error',
    ),

    union_type: $ => prec.left(PREC.BITWISE_OR, seq(
      field('left', $._type),
      '|',
      field('right', $._type),
    )),

    _statement: $ => choice(
      $.variable_declaration,
      $.constant_declaration,
      $.shorthand_variable_declaration,
      $.shorthand_constant_declaration,
      $.destructuring_declaration,
      $.assignment_statement,
      $.compound_assignment_statement,
      $.expression_statement,
      $.if_statement,
      $.while_statement,
      $.until_statement,
      $.for_c_statement,
      $.for_c_shorthand_statement,
      $.for_in_statement,
      $.for_range_statement,
      $.when_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.goto_statement,
      $.yields_statement,
      $.fallthrough_statement,
      $.unreachable_statement,
      $.defer_statement,
      $.label_statement,
      $.assert_statement,
      $.push_context_statement,
      $.undefined_block,
      $.compile_time_directive,
      $.attribute_block,
    ),

    // --- Variable Declarations ---

    variable_declaration: $ => seq(
      optional($.attribute_list),
      'mut',
      field('name', choice($.identifier, '_')),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
      ';',
    ),

    constant_declaration: $ => seq(
      optional($.attribute_list),
      'const',
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
      ';',
    ),

    shorthand_variable_declaration: $ => seq(
      optional($.attribute_list),
      field('name', choice($.identifier, '_')),
      ':=',
      field('value', $._expression),
      ';',
    ),

    shorthand_constant_declaration: $ => seq(
      optional($.attribute_list),
      field('name', $.identifier),
      '::=',
      field('value', $._expression),
      ';',
    ),

    assignment_statement: $ => seq(
      field('left', $._expression),
      '=',
      field('right', $._expression),
      ';',
    ),

    expression_statement: $ => seq($._expression, ';'),

    // =====================================================================
    // CONTROL FLOW
    // =====================================================================

    if_statement: $ => prec.right(seq(
      'if',
      field('condition', $._expression),
      optional($.payload_capture),
      choice(
        seq(':', field('consequent', $._statement)),
        field('consequent', $.block),
      ),
      repeat($.elif_clause),
      optional($.else_clause),
    )),

    elif_clause: $ => seq(
      choice('elif', seq('else', 'if')),
      field('condition', $._expression),
      optional($.payload_capture),
      field('body', $.block),
    ),

    else_clause: $ => seq(
      'else',
      optional($.payload_capture),
      choice(
        seq(':', field('body', $._statement)),
        field('body', $.block),
      ),
    ),

    while_statement: $ => seq(
      optional($.attribute_list),
      'while',
      field('condition', $._expression),
      field('body', $.block),
    ),

    for_c_statement: $ => seq(
      optional($.attribute_list),
      'for',
      // Only support 'mut' form to avoid ambiguity with for_range_statement
      'mut',
      field('init_name', $.identifier),
      optional(seq(':', field('init_type', $._type))),
      '=',
      field('init_value', $._expression),
      ';',
      field('condition', $._expression),
      ';',
      field('update', $._expression),
      field('body', $.block),
    ),

    // Also support the := form
    for_c_shorthand_statement: $ => seq(
      optional($.attribute_list),
      'for',
      field('init_name', $.identifier),
      ':=',
      field('init_value', $._expression),
      ';',
      field('condition', $._expression),
      ';',
      field('update', $._expression),
      field('body', $.block),
    ),

    for_in_statement: $ => seq(
      optional($.attribute_list),
      'for',
      optional(field('reverse', '<-')),
      field('binding_kind', choice('const', 'mut')),
      field('binding', commaSep1(choice($.identifier, '_'))),
      'in',
      field('iterable', $._expression),
      optional(seq(';', field('step', $._expression))),
      choice(
        seq(':', field('body', $._statement)),
        field('body', $.block),
      ),
    ),

    for_range_statement: $ => seq(
      optional($.attribute_list),
      'for',
      optional(field('reverse', '<-')),
      field('range', $._expression),
      optional(seq(';', field('step', $._expression))),
      choice(
        seq(':', field('body', $._statement)),
        field('body', $.block),
      ),
    ),

    // --- When ---

    when_statement: $ => seq(
      optional($.attribute_list),
      'when',
      field('subject', $._expression),
      '{',
      repeat($.when_case),
      '}',
    ),

    when_case: $ => choice(
      seq(
        commaSep1($.when_pattern),
        optional(seq('if', field('guard', $._expression))),
        ':',
        $._when_case_body,
      ),
      seq(
        'else',
        ':',
        $._when_case_body,
      ),
    ),

    _when_case_body: $ => choice(
      seq('{', repeat($._statement), '}'),
      $._statement,
    ),

    when_pattern: $ => choice(
      $.range_pattern,
      $.type_pattern,
      $.enum_shorthand_pattern,
      $.struct_pattern,
      $.array_pattern,
      $._expression,
    ),

    return_statement: $ => seq(
      'return',
      optional(field('value', $._expression)),
      ';',
    ),

    assert_statement: $ => seq(
      field('kind', choice('assert', 'assert_db')),
      '(',
      field('condition', $._expression),
      optional(seq(',', field('message', $._expression))),
      ')',
      ';',
    ),

    // --- Push Context ---

    test_block: $ => seq(
      optional($.attribute_list),
      choice(
        seq('skip', 'test'),
        seq('test', optional('skip')),
      ),
      optional(field('name', $.string_literal)),
      field('body', $.block),
    ),

    // =====================================================================
    // EXPRESSIONS
    // =====================================================================

    _expression: $ => choice(
      $._literal,
      $.identifier,
      $.qualified_identifier,
      $.parenthesized_expression,
      $.unary_expression,
      $.address_of_expression,
      $.try_expression,
      $.spread_expression,
      $.label_address_expression,
      $.increment_expression,
      $.decrement_expression,
      $.binary_expression,
      $.call_expression,
      $.index_expression,
      $.slice_expression,
      $.field_expression,
      $.dereference_expression,
      $.arrow_expression,
      $.optional_chain_expression,
      $.ternary_expression,
      $.type_assertion_expression,
      $.range_expression,
      $.null_coalesce_expression,
      $.else_expression,
      $.payload_capture_expression,
      $.struct_init_expression,
      $.array_init_expression,
      $.map_init_expression,
      $.tuple_expression,
      $.lambda_expression,
      $.block_expression,
      $.when_expression,
      $.cast_expression,
      $.functional_cast_expression,
      $.sizeof_expression,
      $.alignof_expression,
      $.typeof_expression,
      $.typename_expression,
      $.typeid_expression,
      $.typeinfo_expression,
      $.type_assert_expression,
      $.builtin_call_expression,
      $.macro_value,
      $.compile_time_run,
      $.compile_time_code,
      $.compile_time_asm,
      $.compile_time_specialize,
      $.undefined_expression,
      $.unreachable_expression,
      $.unused_expression,
    ),

    // --- Literals ---

    number_literal: $ => token(choice(
      // Hex: 0xFF_AA
      /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
      // Octal: 0q72
      /0[qQ][0-7][0-7_]*/,
      // Binary: 0b1010
      /0[bB][01][01_]*/,
      // Float with decimal digits: 3.14, 3.14f, 3.14d, 12.0
      /[0-9][0-9_]*\.[0-9][0-9_]*[fdFD]?/,
      // Float with suffix only (no decimal digits): 12.f, 12.d
      /[0-9][0-9_]*\.[fdFD]/,
      // Integer: 42, 1_000_000
      /[0-9][0-9_]*/,
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.escape_sequence,
        $.string_content,
      )),
      '"',
    ),

    string_content: $ => token.immediate(prec(-1, /[^"\\]+/)),

    boolean_literal: $ => choice('true', 'false'),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    qualified_identifier: $ => prec(PREC.POSTFIX, seq(
      field('namespace', $.identifier),
      '::',
      field('name', $.identifier),
    )),

    // --- Grouped ---

    address_of_expression: $ => prec.right(PREC.UNARY, seq(
      '&',
      field('operand', $._expression),
    )),

    increment_expression: $ => choice(
      prec.right(PREC.UNARY, seq(
        field('operator', choice('++', '@++', '%++')),
        field('operand', $._expression),
      )),
      prec.left(PREC.POSTFIX, seq(
        field('operand', $._expression),
        field('operator', choice('++', '@++', '%++')),
      )),
    ),

    call_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('function', $._expression),
      '(',
      commaSep($.argument),
      optional(','),
      ')',
    )),

    argument: $ => choice(
      $._expression,
      seq(field('name', $.identifier), ':', field('value', $._expression)),
    ),

    slice_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('object', $._expression),
      '[',
      optional(field('start', $._expression)),
      choice('..=', '..<'),
      optional(field('end', $._expression)),
      ']',
    )),

    dereference_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('operand', $._expression),
      token.immediate('^'),
    )),

    ternary_expression: $ => prec.right(PREC.TERNARY, seq(
      field('condition', $._expression),
      '?',
      field('consequence', $._expression),
      ':',
      field('alternative', $._expression),
    )),

    // --- Type Assertion ---

    range_expression: $ => prec.right(PREC.RANGE, seq(
      field('start', $._expression),
      field('operator', choice('..=', '..<')),
      field('end', $._expression),
    )),

    // --- Null Coalesce ---

    null_coalesce_expression: $ => prec.right(PREC.NULL_COALESCE, seq(
      field('left', $._expression),
      '??',
      field('right', $._expression),
    )),

    // --- Else on Expressions ---
